tests/cases/match/errors/match-empty.ari
enum Choice {
  A,
  B,
}

fn main() -> i64 {
  let value = A;
  match value {
  }
  return 0;
}
